--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
+    "mapbox-gl": "^2.2.0",
+    "mapbox-gl-geocoder": "^2.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
